# opentype

./: .gitignore  .travis.yml  Cargo.toml  Gemfile  Guardfile  LICENSE.md  Makefile  README.md
.github/workflows/: build.yml
pkg/date/: Cargo.toml  lib.rs
src/: Makefile  band.rs  compound.rs  constant.rs  consts.rs  file.rs  font.rs  glyph_definition.rs  glyph_positioning.rs  glyph_substitution.rs  input.rs  lib.rs  macros.rs  main.rs  primitive.rs  result.rs  spec.rs  structs.rs  style.rs  table.rs  tape.rs  test.rs  types.rs  utils.rs
src/bins/: Makefile
src/bins/benton/: main.rs
src/compact2/: mod.rs
src/font_variations/: mod.rs
src/font_variations/common/: item.rs  mod.rs
src/glyph_definition/: element.rs  mod.rs  table.rs
src/glyph_positioning/: element.rs  feature.rs  lookup.rs  mod.rs  script.rs  table.rs  value.rs
src/glyph_positioning/table/: adjustment.rs  mod.rs
src/glyph_substitution/: element.rs  mod.rs  table.rs
src/glyph_substitution/table/: mod.rs
src/glyph_transformation/: class.rs  coverage.rs  feature.rs  mod.rs
src/layout/: class.rs  context.rs  correction.rs  coverage.rs  device.rs  directory.rs  feature.rs  language.rs  lookup.rs  mod.rs  script.rs
src/layout/lookup/: class.rs  coverage.rs  mod.rs  table.rs
src/lib/: Makefile
src/lib/date/: lib.rs
src/lib/input/: endian.rs  lib.rs
src/lib/opentype/: date.rs  format.rs  input.rs  lib.rs  spec.rs  table.rs
src/libs/: Makefile
src/libs/input/: lib.rs
src/libs/opentype/: lib.rs
src/math_table/: constants.rs  mod.rs
src/mathematics/: constants.rs  glyphinfo.rs  glyphs.rs  mod.rs  variants.rs
src/opentype/: format.rs
src/table/: char_mapping.rs  font_header.rs  header.rs  horizontal_header.rs  horizontal_metrics.rs  mapping.rs  max_profile.rs  maximum_profile.rs  mod.rs  naming_table.rs  offset_table.rs  postscript.rs  prelude.rs  profile.rs  windows_metrics.rs
src/tables/: color_palettes.rs  mod.rs
src/tables/font_variations/: mod.rs
src/tables/glyph_definition/: element.rs  mod.rs
src/tables/glyph_positioning/: element.rs  mod.rs
src/tables/glyph_substitution/: element.rs  (+1 more)
src/variation/: mod.rs
src/variations/: item.rs  mod.rs
test/: Makefile  main.rs  support.rs
test/lib/: Makefile
test/libs/: Makefile
test/src/: input_test.rs
tests/: color_palettes.rs  file.rs  file_test.rs  fixture.rs  font_variations.rs  glyph_definition.rs  glyph_definition_test.rs  glyph_positioning.rs  glyph_positioning_test.rs  glyph_substitution.rs  glyph_substitution_test.rs  lib.rs  math.rs  mathematics.rs
tests/common/: mod.rs
tests/fixtures/: math-tests.txt  test.xml  xits-math.xml
tests/support/: mod.rs
(+10 files in other folders)
