[package]
name = "opentype"
version = "0.28.4"
edition = "2021"
license = "Apache-2.0/MIT"
authors = [
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Simon Sapin <simon.sapin@exyr.org>",
]
description = "The package provides a parser for OpenType fonts."
documentation = "https://docs.rs/opentype"
homepage = "https://github.com/bodoni/opentype"
repository = "https://github.com/bodoni/opentype"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "opentype", "typeface", "typography"]
exclude = ["tests/fixtures/*"]

[features]
# https://github.com/google/fonts/issues/5553
ignore-invalid-checksums = []

[dependencies]
postscript = "0.17.4"
truetype = "0.43.0"
typeface = "0"
