[package]
name = "opentype"
version = "0.34.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = [
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Simon Sapin <simon.sapin@exyr.org>",
]
description = "The package provides a builder and parser of OpenType fonts."
documentation = "https://docs.rs/opentype"
homepage = "https://github.com/bodoni/opentype"
repository = "https://github.com/bodoni/opentype"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "opentype", "typeface", "typography"]
exclude = ["tests/fixtures/*"]

[features]
# https://github.com/google/fonts/issues/6888
ignore-incomplete-directories = []
# https://github.com/google/fonts/issues/6894
ignore-incomplete-marks = []
# https://github.com/google/fonts/issues/6892
# https://github.com/google/fonts/issues/6893
ignore-invalid-checksums = []

[dependencies]
postscript = "0.18.0"
truetype = "0.46.0"
typeface = "0.4.1"
